2011-09-15  Andreas Kupries  <andreask@activestate.com>

	* tests/create.test: Fixed left behind temp directory.

	* doc/oid.inc: New file, syntax of object identifiers.
	* doc/tcl-hwloc.man: Added section about object identifiers.

	* generic/topology.c: Fixed wrong args typo.
	* doc/instance.inc: Continued extending documentation and
	* tests/create.test: testsuite coverage of topology instance
	* tests/topology.test: methods. Reworked the testsuite a bit to
	  use XML files of saved real topologies instead of embedding
	  them. See below.
	* tests/pu4.xml: New files, saved topologies.
	* tests/topology1.xml: 

	* tests/bitmap.test: Updated test 3.0.13 to handle platform
	  differences (word size).

	* tests/convert.test: Renamed/deleted. Added a 'topology_'
	* tests/cpu_node_set.test: prefix to clarify what section
	* tests/cpubind.test: of the API they belong to.
	* tests/membind.test:

	* tests/topology_convert.test: Renamed/Added. See above.
	* tests/topology_cpu_node_set.test:
	* tests/topology_cpubind.test:
	* tests/topology_membind.test:

2011-09-14  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: Extended documentation and testsuite, covering
	* tests/topology.test: instance methods 'type' and 'width'.

	* tests/topology.test: Started conversion to proper testsuite, and
	  expansion to all instance methods.

	* generic/bitmap.c: Fixed warning about possible uninitialized variable.
	* generic/hwloc.c: Added check to -set_synthetic processing to avoid
	* tests/create.test: hwloc assertion and abort on empty description.
	  Updated tests, and fixups too, files where needed (xml). Folded tests
	  of instance destruction into this file.
	* tests/destroy.test: Removed.

2011-09-13  Andreas Kupries  <andreask@activestate.com>

	* generic/hwloc.c: Fixed option processing of 'hwloc create',
	* tests/create.test: plus associated updates to the testsuite.

	* generic/hwloc.c: Updated name of the package init function,
	  forgotten yesterday.
